# basicpy-docker-mcmicro

./: .dockerignore  .gitignore  Dockerfile  main.py  populate_scyjava_cache.py  pyproject.toml
